name:                deriving-date
version:             0.1.0.0
synopsis:            Automatically derive date parsing logic via Symbols
description:         Specify date formatters at the type-level
bug-reports:         https://github.com/shapr/deriving-date/issues
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com, shae.erisson@gmail.com
copyright:           Shae Erisson (c) 2020
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:
    Data.Time.Deriving
  build-depends:
    aeson, base < 5, bytestring, text, time
  hs-source-dirs:
    src
  default-language:
    Haskell2010
